// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps components ErroredStep renders correctly 1`] = `
<Component>
  <Component
    className="ins-c-sources__empty-state"
    variant="full"
  >
    <Component
      className="pf-u-mb-0"
      color="var(--pf-global--danger-color--100)"
      icon={[Function]}
    />
    <Component
      className="pf-u-mt-xl"
      headingLevel="h5"
      size="lg"
    >
      Configuration unsuccessful
    </Component>
    <Component>
      <Progress
        className="pf-u-mb-md ins-c-sources__progress"
        id=""
        label="Step 1: create source"
        max={0}
        measureLocation="top"
        min={0}
        size={null}
        title=" "
        value={0}
        valueText="Step 1: create source"
        variant="danger"
      />
      <Component>
        <Component
          variant="p"
        >
          Your source has not been successfully added:
        </Component>
      </Component>
    </Component>
    <Component
      onClick={[MockFunction]}
      variant="primary"
    >
      Go back to my application
    </Component>
    <Component>
      <Component
        onClick={[MockFunction]}
        variant="link"
      >
        Retry
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`Steps components FinishedStep renders correctly 1`] = `
<Component>
  <Component
    className="ins-c-sources__empty-state"
    variant="full"
  >
    <Component
      className="pf-u-mb-0"
      color="var(--pf-global--success-color--100)"
      icon={[Function]}
    />
    <Component
      className="pf-u-mt-xl"
      headingLevel="h5"
      size="lg"
    >
      Configuration successful
    </Component>
    <Component>
      <Progress
        className="pf-u-mb-md ins-c-sources__progress"
        id=""
        label="Completed"
        max={0}
        measureLocation="top"
        min={0}
        size={null}
        title=" "
        value={0}
        valueText="Completed"
        variant="success"
      />
      Here I Am
    </Component>
    <Component
      className="pf-u-mt-xl"
      onClick={[MockFunction]}
      variant="primary"
    >
      Go back to my application
    </Component>
    <Component>
      <a
        href="/hybrid/settings/sources"
      >
        <Component
          variant="link"
        >
          Take me to sources
        </Component>
      </a>
    </Component>
  </Component>
</Component>
`;

exports[`Steps components FinishedStep renders withou takemetosources button 1`] = `
<Component>
  <Component
    className="ins-c-sources__empty-state"
    variant="full"
  >
    <Component
      className="pf-u-mb-0"
      color="var(--pf-global--success-color--100)"
      icon={[Function]}
    />
    <Component
      className="pf-u-mt-xl"
      headingLevel="h5"
      size="lg"
    >
      Configuration successful
    </Component>
    <Component>
      <Progress
        className="pf-u-mb-md ins-c-sources__progress"
        id=""
        label="Completed"
        max={0}
        measureLocation="top"
        min={0}
        size={null}
        title=" "
        value={0}
        valueText="Completed"
        variant="success"
      />
      Here I Am
    </Component>
    <Component
      className="pf-u-mt-xl"
      onClick={[MockFunction]}
      variant="primary"
    >
      Go back to my application
    </Component>
  </Component>
</Component>
`;

exports[`Steps components LoadingStep renders correctly 1`] = `
<Component>
  <Component
    className="ins-c-sources__empty-state"
    variant="full"
  >
    <Component
      className="pf-u-mb-0"
      icon={[Function]}
    />
    <Component
      className="pf-u-mt-xl"
    >
      Loading, please wait.
    </Component>
  </Component>
</Component>
`;

exports[`Steps components LoadingStep renders correctly with custom props 1`] = `
<Component>
  <Component
    className="ins-c-sources__empty-state"
    variant="full"
  >
    <Component
      className="pf-u-mb-0"
      icon={[Function]}
    />
    <Component
      className="pf-u-mt-xl"
    >
      Here I Am
    </Component>
    <Component
      className="pf-u-mt-xl"
    >
      <Component
        onClick={[MockFunction]}
        variant="link"
      >
        Cancel
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`Steps components LoadingStep renders correctly with progress bar 1`] = `
<Component>
  <Component
    className="ins-c-sources__empty-state"
    variant="full"
  >
    <Component
      className="pf-u-mb-0"
      icon={[Function]}
    />
    <Component
      className="pf-u-mt-xl"
    >
      Loading, please wait.
    </Component>
  </Component>
</Component>
`;
